2013-06-28  Roland Clobus <rclobus@rclobus.nl>
	* server/meta.c: Check whether the metaserver is still alive.

2013-06-27  Roland Clobus <rclobus@rclobus.nl>
	* autogen.sh, configure.ac: Set required version of autoconf back to
	2.68, to build on Ubuntu Precise again.

2013-06-26  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac, Makefile.am, autogen.sh, client/gtk/data/Makefile.am,
	common/Makefile.am: Minimum required version for automake is 1.11,
	fixed warnings for automake 1.13.
	* common/network.h, server/player.c, metaserver/main.c:
	Initialised GError for net_get_peer_name.
	* configure.ac, server/main.c, Makefile.am, metaserver/main.c,
	common/network.c: Switched from POSIX to GIO for the network
	communication, which adds full IPv6 support.
	* docs/pioneers-metaserver.6: The metaserver checks for used ports.
	* autogen.sh, macros/Makefile.am, macros/type_socklen_t.m4:
	TYPE_SOCKLEN_T is no longer required due to GIO.
	* MinGW/pioneers.nsi.in, MinGW/Makefile.am: Activated the server.
	* README.Cygwin: Updated building instructions.
	* server/gtk/pioneers-server.desktop.in, client/gtk/pioneers.desktop.in,
	editor/gtk/pioneers-editor.desktop.in: Added the field Keywords.

2013-06-17  Micah Bunting <amnykon@gmail.com>
        * client/gtk/legend.c, editor/gtk/editor.c, common/gtk/theme.h,
        common/gtk/map-icons.c, common/gtk/Makefile.am, common/gtk/theme.c:
	Moved terrain icon functions to common/gtk/map-icons.c.
        
2013-06-14  Micah Bunting <amnykon@gmail.com>
        * editor/gtk/editor.c: Removed extra if statement in build_terrain_menu.

2013-06-13  Micah Bunting <amnykon@gmail.com>
        * client/common/develop.c client/ai/greedy.c server/pregame.c
        server/develop.c common/cards.c common/cards.h: Hides the DevelDeck
        structure and adds accessor functions.

2013-06-13  Roland Clobus <rclobus@rclobus.nl>
	* server/server.c: Don't log about leaving players twice.